--- a/package.json
+++ b/package.json
@@ -12,49 +12,59 @@
     "es",
     "lib",
     "babel.js",
-    ".babelrc"
+    ".babelrc",
+    "eslint.js",
+    "prettier.config.js"
   ],
   "license": "MIT",
   "scripts": {
     "build": "NODE_ENV='cjs' babel-node src/bin.js src",
-    "flow": "flow"
+    "flow": "flow",
+    "eslint": "eslint ./",
+    "format": "prettier --write '**/*.{js,json,md,css,yaml,yml}' '*.{js,json,md,css,yaml,yml}'"
   },
   "dependencies": {
-    "@babel/cli": "7.2.0",
-    "@babel/core": "7.2.0",
-    "@babel/plugin-proposal-class-properties": "7.2.1",
-    "@babel/plugin-transform-runtime": "7.2.0",
-    "@babel/preset-env": "7.2.0",
-    "@babel/preset-flow": "7.0.0",
-    "@babel/preset-react": "7.0.0",
-    "@babel/runtime": "7.2.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.1",
-    "babel-jest": "23.6.0",
-    "babel-loader": "8.0.4",
-    "babel-plugin-add-module-exports": "1.0.0",
-    "babel-plugin-require-context-hook": "1.0.0",
-    "babel-plugin-styled-components": "1.9.2",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.21",
-    "chalk": "2.4.1",
-    "eslint": "5.9.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "3.3.0",
-    "eslint-plugin-flowtype": "3.2.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jest": "22.1.2",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-prettier": "3.0.0",
-    "eslint-plugin-react": "7.11.1",
-    "execa": "1.0.0",
-    "flow-bin": "0.87.0",
-    "flow-copy-source": "2.0.2",
-    "flow-coverage-report": "0.6.0",
-    "github-changes": "1.1.2",
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.2.1",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.2.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-add-module-exports": "^1.0.0",
+    "babel-plugin-require-context-hook": "^1.0.0",
+    "babel-plugin-styled-components": "^1.9.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.21",
+    "chalk": "^2.4.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-flowtype": "^3.2.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.1.2",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "execa": "^1.0.0",
+    "flow-bin": "^0.87.0",
+    "flow-copy-source": "^2.0.2",
+    "flow-coverage-report": "^0.6.0",
+    "github-changes": "^1.1.2",
     "rimraf": "^2.6.2",
-    "yargs": "12.0.5"
+    "yargs": "^12.0.5"
   },
   "devDependencies": {
-    "@babel/node": "^7.2.0"
+    "@babel/node": "7.2.0",
+    "eslint": "5.9.0",
+    "prettier": "1.15.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      "./eslint.js"
+    ]
   }
 }
