--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "scripts": {
     "build": "NODE_ENV='cjs' babel-node src/bin.js src",
+    "test": "NODE_ENV='cjs' babel-node src/bin.js src --es-dir esm -i '__specs__' '**/*.spec.js' '**/*.example.js' --cjs-dir 'cjs2'",
     "flow": "flow",
     "eslint": "eslint ./",
     "format": "prettier --write '**/*.{js,json,md,css,yaml,yml}' '*.{js,json,md,css,yaml,yml}'",
