--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "prettier.config.js"
   ],
   "scripts": {
-    "build": "NODE_ENV='cjs' babel-node src/bin.js src",
+    "build": "NODE_ENV='cjs' babel-node src/bin.js build src",
     "test": "NODE_ENV='cjs' babel-node src/bin.js src --es-dir esm -i '__specs__' '**/*.spec.js' '**/*.example.js' --cjs-dir 'cjs2'",
+    "help": "NODE_ENV='cjs' babel-node src/bin.js",
     "flow": "flow",
     "eslint": "eslint ./",
     "format": "prettier --write '**/*.{js,json,md,css,yaml,yml}' '*.{js,json,md,css,yaml,yml}'",
