--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   ],
   "scripts": {
     "build": "NODE_ENV='cjs' babel-node src/bin.js build src",
-    "test": "NODE_ENV='cjs' babel-node src/bin.js build src --es-dir esm --ignore '__specs__' '**/*.spec.js' '**/*.example.js' --cjs-dir 'cjs2'",
+    "test:cli": "NODE_ENV='cjs' babel-node src/bin.js build src --es-dir esm --ignore '__specs__' '**/*.spec.js' '**/*.example.js' --cjs-dir 'cjs2'",
     "help": "NODE_ENV='cjs' babel-node src/bin.js",
+    "test": "NODE_ENV='test' jest --coverage",
+    "test:watch": "npm run test -- --watch",
     "flow": "flow",
-    "flow-coverage": "NODE_ENV='cjs' babel-node src/bin.js flow --threshold 82",
+    "flow-coverage": "NODE_ENV='cjs' babel-node src/bin.js flow --threshold 86",
     "eslint": "eslint ./",
     "format": "prettier --write '**/*.{js,json,md,css,yaml,yml}' '*.{js,json,md,css,yaml,yml}'",
     "changelog": "github-changes -o evenchange4 -r hsu-scripts -b master -f ./CHANGELOG.md --order-semver --use-commit-body"
@@ -64,8 +66,32 @@
     "flow-bin": "0.88.0",
     "github-changes": "1.1.2",
     "husky": "1.2.0",
+    "jest": "23.6.0",
     "lint-staged": "8.1.0",
     "prettier": "1.15.3"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>/setupTests.js",
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/**/*.test.js",
+      "!src/**/*.example.js"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/",
+      "<rootDir>/lib/",
+      "<rootDir>/es/"
+    ],
+    "resetMocks": true,
+    "resetModules": true,
+    "coverageThreshold": {
+      "global": {
+        "branches": 37,
+        "functions": 66,
+        "lines": 60,
+        "statements": 58
+      }
+    }
   },
   "eslintConfig": {
     "extends": [
