--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,12 @@ install:
 
 script:
   - yarn run eslint
+  - yarn run test
   - yarn run flow-coverage
   - yarn run build
+
+after_success:
+  - ./node_modules/.bin/codecov
 
 deploy:
   - provider: npm
