--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@babel/node": "7.2.0",
+    "codecov": "3.1.0",
     "eslint": "5.10.0",
     "flow-bin": "0.88.0",
     "github-changes": "1.1.2",
