--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: false
 language: node_js
 node_js:
-  - '11.3.0'
+  - '11.4.0'
 
 env:
   global:
@@ -19,8 +19,12 @@ install:
 
 script:
   - yarn run eslint
+  - yarn run test
   - yarn run flow-coverage
   - yarn run build
+
+after_success:
+  - ./node_modules/.bin/codecov
 
 deploy:
   - provider: npm
