--- a/package.json
+++ b/package.json
@@ -37,10 +37,7 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.2.0",
-    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.4",
     "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-styled-components": "^1.10.0",
@@ -67,12 +64,14 @@
     "flow-bin": "0.89.0",
     "github-changes": "1.1.2",
     "husky": "1.3.0",
-    "jest": "23.6.0",
+    "jest": "24.0.0-alpha.9",
     "lint-staged": "8.1.0",
     "prettier": "1.15.3"
   },
   "jest": {
-    "setupTestFrameworkScriptFile": "<rootDir>/setupTests.js",
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ],
     "collectCoverageFrom": [
       "src/**/*.js",
       "!src/**/*.test.js",
