--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "flow-coverage": "NODE_ENV='cjs' babel-node src/bin.js flow --threshold 86",
     "eslint": "eslint ./",
     "format": "prettier --write '**/*.{js,json,md,css,yaml,yml}' '*.{js,json,md,css,yaml,yml}'",
-    "changelog": "github-changes -o evenchange4 -r hsu-scripts -b master -f ./CHANGELOG.md --order-semver --use-commit-body"
+    "changelog": "conventional-changelog --preset jscs --infile ./CHANGELOG.md --same-file --release-count 0 --output-unreleased"
   },
   "dependencies": {
     "@babel/cli": "^7.2.0",
@@ -60,9 +60,9 @@
   "devDependencies": {
     "@babel/node": "7.2.2",
     "codecov": "3.1.0",
+    "conventional-changelog-cli": "2.0.11",
     "eslint": "5.10.0",
     "flow-bin": "0.89.0",
-    "github-changes": "1.1.2",
     "husky": "1.3.0",
     "jest": "24.0.0-alpha.9",
     "lint-staged": "8.1.0",
