--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "flow-coverage": "NODE_ENV='cjs' babel-node src/bin.js flow --threshold 86",
     "eslint": "eslint ./",
     "format": "prettier --write '**/*.{js,json,md,css,yaml,yml}' '*.{js,json,md,css,yaml,yml}'",
-    "changelog": "conventional-changelog --preset jscs --infile ./CHANGELOG.md --same-file --release-count 0 --output-unreleased"
+    "changelog": "conventional-changelog --infile ./CHANGELOG.md --same-file --release-count 0 --output-unreleased"
   },
   "dependencies": {
     "@babel/cli": "^7.2.0",
