--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-styled-components": "^1.10.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.21",
-    "chalk": "^2.4.1",
+    "chalk": "^2.4.2",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-flowtype": "^3.2.0",
@@ -50,7 +50,7 @@
     "eslint-plugin-jest": "^22.1.2",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.2",
+    "eslint-plugin-react": "^7.12.3",
     "execa": "^1.0.0",
     "flow-copy-source": "^2.0.2",
     "flow-coverage-report": "^0.6.1",
@@ -62,6 +62,7 @@
     "codecov": "3.1.0",
     "conventional-changelog-cli": "2.0.11",
     "eslint": "5.12.0",
+    "eslint-plugin-react-hooks": "0.0.0",
     "flow-bin": "0.89.0",
     "husky": "1.3.1",
     "jest": "24.0.0-alpha.9",
