--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "NODE_ENV='test' jest --coverage",
     "test:watch": "npm run test -- --watch",
     "flow": "flow",
-    "flow-coverage": "NODE_ENV='cjs' babel-node src/bin.js flow --threshold 86",
+    "flow-coverage": "NODE_ENV='cjs' babel-node src/bin.js flow --threshold 90",
     "eslint": "eslint ./",
     "format": "prettier --write '**/*.{js,json,md,css,yaml,yml}' '*.{js,json,md,css,yaml,yml}'",
     "changelog": "conventional-changelog --infile ./CHANGELOG.md --same-file --release-count 0 --output-unreleased"
@@ -31,30 +31,31 @@
   "dependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-env": "^7.3.1",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.2.0",
+    "@babel/runtime": "^7.3.1",
     "babel-eslint": "^10.0.1",
     "babel-plugin-add-module-exports": "^1.0.0",
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-styled-components": "^1.10.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.21",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.23",
     "chalk": "^2.4.2",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-flowtype": "^3.2.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^22.1.2",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-flowtype": "^3.2.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.2.1",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.3",
+    "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "0.0.0",
     "execa": "^1.0.0",
     "flow-copy-source": "^2.0.2",
     "flow-coverage-report": "^0.6.1",
+    "ramda": "^0.26.1",
     "rimraf": "^2.6.3",
     "yargs": "^12.0.5"
   },
@@ -67,7 +68,7 @@
     "husky": "1.3.1",
     "jest": "24.0.0",
     "lint-staged": "8.1.1",
-    "prettier": "1.16.2"
+    "prettier": "1.16.3"
   },
   "jest": {
     "setupFilesAfterEnv": [
@@ -87,10 +88,10 @@
     "resetModules": true,
     "coverageThreshold": {
       "global": {
-        "branches": 37,
-        "functions": 66,
+        "branches": 20,
+        "functions": 34,
         "lines": 60,
-        "statements": 58
+        "statements": 55
       }
     }
   },
